--- a/rasa/data/stories.yml
+++ b/rasa/data/stories.yml
@@ -2,40 +2,48 @@ version: "3.1"
 
 stories:
 
-- story: happy path
+# --- HISTORIA DE CHITCHAT (OPCIONAL PERO RECOMENDADA) ---
+- story: Chitchat
   steps:
   - intent: greet
   - action: utter_greet
-  - intent: mood_great
-  - action: utter_happy
-
-  - intent: pedir_cita
-  - action: utter_ask_name
-  - intent: dar_nombre
-  - slot_was_set:
-      - name: "<nombre del paciente>"
-  - action: utter_ask_date
-  - intent: dar_fecha
-  - slot_was_set:
-      - date: "<fecha de la cita>"
-  - action: action_create_appointment
-
-- story: sad path 1
-  steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
   - intent: affirm
-  - action: utter_happy
+  - action: utter_ask_what_next # Tu sugerencia de "En qué te ayudo"
 
-- story: sad path 2
+# --- HISTORIA DE NEGOCIO 1: Directo a la cita ---
+- story: Flujo de agendamiento (Directo)
+  steps:
+  - intent: pedir_cita
+  - action: appointment_form
+  - active_loop: appointment_form
+  # 1. User da el nombre (capturado como 'intent: None' por el form)
+  - intent: None
+  - action: appointment_form
+  - active_loop: appointment_form
+  # 2. User da la fecha (capturado como 'intent: None')
+  - intent: None
+  - action: appointment_form
+  - active_loop: null # El form termina
+  # 3. LA LÓGICA QUE FALTABA:
+  - action: action_create_appointment
+  - action: utter_goodbye
+
+# --- HISTORIA DE NEGOCIO 2: Saludo -> Cita ---
+- story: Flujo de agendamiento (Después de Saludar)
   steps:
   - intent: greet
   - action: utter_greet
-  - intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
-  - intent: deny
+  - intent: pedir_cita
+  - action: appointment_form
+  - active_loop: appointment_form
+  # 1. User da el nombre
+  - intent: None
+  - action: appointment_form
+  - active_loop: appointment_form
+  # 2. User da la fecha (aquí usamos 'dar_fecha' para más robustez)
+  - intent: dar_fecha
+  - action: appointment_form
+  - active_loop: null # El form termina
+  # 3. LA LÓGICA QUE FALTABA:
+  - action: action_create_appointment
   - action: utter_goodbye
