--- a/rasa/data/rules.yml
+++ b/rasa/data/rules.yml
@@ -12,22 +12,21 @@ rules:
     - intent: goodbye
     - action: utter_goodbye
 
-- rule: Iniciar proceso de cita
+- rule: Iniciar formulario de cita
   steps:
     - intent: pedir_cita
-    - action: utter_ask_name
+    - action: appointment_form
+    - active_loop: appointment_form
 
-- rule: Usuario da nombre → pedir fecha
+- rule: Completar formulario
+  condition:
+    - active_loop: appointment_form
   steps:
-    - intent: dar_nombre
-    - action: utter_ask_date
-
-- rule: Usuario da fecha → consultar disponibilidad
-  steps:
-    - intent: dar_fecha
+    - action: appointment_form
+    - active_loop: null
     - action: action_check_availability
 
-- rule: Usuario elige hora → crear cita
+- rule: Usuario elige hora
   steps:
-    - intent: affirm
+    - intent: dar_hora
     - action: action_create_appointment
