--- a/rasa/domain.yml
+++ b/rasa/domain.yml
@@ -10,10 +10,6 @@ intents:
   - dar_fecha
   - dar_hora
 
-entities:
-  - name
-  - date
-  - hour
 
 slots:
   name:
@@ -46,14 +42,12 @@ slots:
         entity: hour
       - type: from_text
 
-  # ESTE ESTABA MAL → Ahora tiene mappings Dummy
   available_hours:
     type: list
     influence_conversation: false
     mappings:
       - type: custom
 
-  # ESTE TAMBIÉN NECESITA MAPPINGS OBLIGATORIAMENTE
   converted_date:
     type: text
     influence_conversation: false
@@ -69,7 +63,6 @@ responses:
 
   utter_ask_what_next:
     - text: "Entendido. ¿En qué te puedo ayudar?"
-    - text: "Perfecto. ¿Cómo puedo asistirte hoy?"
 
   utter_ask_name:
     - text: "¿Podrías indicarme tu nombre completo, por favor?"
@@ -78,7 +71,7 @@ responses:
     - text: "¿Qué día deseas agendar tu cita?"
 
   utter_api_error:
-    - text: "⚠️ Lo siento, nuestros sistemas de agendamiento no están disponibles en este momento. Por favor, intenta más tarde."
+    - text: "⚠️ Lo siento, nuestros sistemas de agendamiento no están disponibles en este momento."
 
   utter_api_error_reason:
     - text: "⚠️ No se pudo registrar la cita. Motivo: {error_reason}"
